5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2643/executions/1578_1330.log
== TEST (2019-03-13 14:24:44) 
-- CODE:
print((round 250/6 , 2 ))
-- ERROR:
File "XXXX", line 1
    print((round 250/6 , 2 ))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:28:03) 
-- CODE:
print(round (250/6 , 2 ))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:28:44) 
-- CODE:
print(round (250/6 , 2 ))
-- EXECUTION TIME:
0.184199
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
